<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent" android:background="@color/background2">

	<EditText android:id="@+id/txtNombreId" android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:hint="@string/Nombre">
		<requestFocus></requestFocus>
	</EditText>

	<EditText android:id="@+id/txtDireccionId"
		android:layout_height="wrap_content" android:layout_width="fill_parent"
		android:hint="@string/direccion">
		<requestFocus></requestFocus>
	</EditText>
	<EditText android:id="@+id/txtTelefonoId"
		android:layout_height="wrap_content" android:layout_width="fill_parent"
		android:hint="@string/telefono" android:inputType="phone">
		<requestFocus></requestFocus>
	</EditText>
	<EditText android:id="@+id/txtWebId"
		android:layout_height="wrap_content" android:layout_width="fill_parent"
		android:hint="@string/web" android:inputType="textWebEditText">
		<requestFocus></requestFocus>
	</EditText>
	<Button android:text="@string/modificar" android:id="@+id/modificarBtn"
		android:layout_width="fill_parent" android:layout_height="wrap_content" android:onClick="btnModificar"/>



</LinearLayout>
