<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@color/fondo" android:layout_height="fill_parent"
	android:layout_width="fill_parent" android:padding="10dip"
	android:orientation="horizontal">

	<LinearLayout android:orientation="vertical"
		android:layout_height="wrap_content" android:layout_width="fill_parent"
		android:layout_gravity="center">

		<EditText android:id="@+id/nombreTxt" android:inputType="textPersonName"
			android:layout_height="wrap_content" android:layout_width="fill_parent"
			android:hint="@string/Nombre">
			<requestFocus />
		</EditText>

		<EditText android:id="@+id/passTxt" android:layout_width="match_parent"
			android:layout_height="wrap_content" android:inputType="textPassword"
			android:hint="@string/pass" />

		<EditText android:id="@+id/emailTxt" android:inputType="textEmailAddress"
			android:layout_width="match_parent" android:layout_height="wrap_content"
			android:hint="@string/email" />



		<LinearLayout android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:orientation="vertical"
			android:id="@+id/linearLayout2">
		</LinearLayout>

		<Button android:id="@+id/crearUsuarioBtn" android:text="@string/BtnRegistrarse"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:onClick="crearUsuario" />

	</LinearLayout>
</LinearLayout>
