<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@color/background2" android:layout_height="fill_parent"
	android:layout_width="fill_parent" android:padding="10dip"
	android:orientation="horizontal">
	
	<ScrollView android:layout_width="fill_parent"
	android:layout_height="fill_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@color/background2" android:layout_width="match_parent"
	android:layout_height="wrap_content" android:orientation="vertical"
	android:weightSum="1">

	<TableLayout android:layout_height="wrap_content"
		android:id="@+id/tableLayout1" android:layout_width="match_parent"
		android:stretchColumns="0,0,0,0,0,0" >

		<TableRow android:id="@+id/tableRow2" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:paddingBottom="0px" android:layout_marginBottom="0dp">

			<EditText android:id="@+id/txtNombreId" android:hint="@string/Nombre"
				android:layout_height="match_parent" android:layout_width="match_parent"
				android:layout_weight="1" android:maxLength="20"/>
		</TableRow>
		<TableRow android:id="@+id/tableRow22" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:paddingTop="0dp">

			<EditText android:layout_height="wrap_content" android:id="@+id/txtDireccionId"
				android:layout_weight="1" android:hint="@string/direccion"
				android:layout_width="match_parent" android:layout_gravity="top" android:maxLength="50"/>

		</TableRow>
		<TableRow android:id="@+id/tableRow3" android:layout_width="wrap_content"
			android:layout_height="wrap_content" >


			<EditText android:inputType="number" android:id="@+id/txtTelefonoId"
				android:layout_width="0dp" android:layout_weight="1"
				android:layout_height="wrap_content" android:hint="@string/telefono" android:maxLength="15"/>

		</TableRow>
		<TableRow android:id="@+id/tableRow5" android:layout_width="wrap_content"
			android:layout_height="wrap_content">


			<EditText android:inputType="textWebEditText" android:id="@+id/txtWebId"
				android:layout_width="0dp" android:layout_weight="1"
				android:layout_height="wrap_content" android:hint="@string/web" android:maxLength="50"/>

		</TableRow>
		<TableRow android:id="@+id/tableRow4" android:layout_width="wrap_content"
			android:layout_height="wrap_content">

			<Button android:text="@string/categoria" android:id="@+id/btnCategoriaSitioId"
				android:onClick="mostarCategoria" android:layout_weight="1"
				android:layout_width="0dp" />

			<EditText android:cursorVisible="false" android:focusable="false"
				android:enabled="true" android:id="@+id/txtCategoriaId"
				android:layout_width="0dp" android:layout_weight="1"
				android:layout_height="wrap_content" android:hint="@string/categoria">

			</EditText>

		</TableRow>
		<TableRow android:id="@+id/tableRow65" android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			
		    
			
		</TableRow>
		
	</TableLayout>
	<AbsoluteLayout android:paddingTop="10dp"
	    android:layout_width="fill_parent" android:layout_height="fill_parent" >
	
	    	<view
	    	    android:id="@+id/crearSitioMapaId"
	    	    android:layout_width="match_parent"
	    	    android:layout_height="149dp"
	    	    android:layout_x="11dp"
	    	    android:apiKey="0VISs42MeYw0eJ3bl_Wi5WDRAGo_mwvPyeNuErw"
	    	    class="com.google.android.maps.MapView"
	    	    android:clickable="true"
	    	    android:focusableInTouchMode="true" />
	    
	</AbsoluteLayout>
	

	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content" android:scrollbars="none" android:paddingTop="10dp">
		<Button android:ellipsize="start" android:text="@string/agregar"
			android:layout_width="fill_parent" android:layout_height="fill_parent"
			android:onClick="crearSitio" android:id="@+id/btnAgregarSitioId" />
	</LinearLayout>
</LinearLayout>
</ScrollView>
</LinearLayout>
