<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:background="@color/background" android:layout_height="fill_parent"
	android:layout_width="fill_parent" android:padding="10dip"
	android:orientation="horizontal">
	
	<LinearLayout android:orientation="vertical"
		android:layout_height="wrap_content" android:layout_width="fill_parent"
		android:layout_gravity="center">
	
	
	<TableLayout android:id="@+id/tableLayout1" 
				 android:layout_width="match_parent" 
				 android:layout_height="fill_parent">
				 
		<TableRow android:id="@+id/tableRow6" 
				  android:layout_width="wrap_content" 
				  android:layout_height="wrap_content">
				  
			<TextView android:text="@string/Nombre" 
					  android:layout_height="wrap_content" 
					  android:layout_width="wrap_content" 
					  android:id="@+id/textView1"/>
					  
			<EditText android:id="@+id/nombreTxt" 
					  android:inputType="textPersonName" 
					  android:layout_height="wrap_content" android:layout_width="200dp">
					  <requestFocus/>
					  	</EditText>
		</TableRow>
		
		<TableRow android:id="@+id/tableRow1" 
				  android:layout_width="wrap_content"
				  android:layout_height="wrap_content">
				  
			<TextView android:id="@+id/emailLbl" 
					  android:layout_height="wrap_content"
					  android:layout_width="fill_parent" 
					  android:text="@string/email"
					  />
					  
			<EditText  android:id="@+id/emailTxt"
			  		   android:inputType="textEmailAddress"
					   android:layout_width="match_parent" 
					   android:layout_height="wrap_content"/>
				
		

		</TableRow>
		
		<TableRow android:id="@+id/tableRow2" 
				  android:layout_weight="5.0"
				  android:layout_height="match_parent" 
				  android:layout_width="match_parent">
				  
			<TextView android:id="@+id/passLbl" 
					  android:text="@string/pass"
					  android:layout_height="wrap_content"
					  android:layout_width="fill_parent"/>
					  
			<EditText android:id="@+id/passTxt" 
					  android:layout_width="match_parent"
					  android:layout_height="wrap_content" 
					  android:inputType="textPassword"/>

		</TableRow>
		
		
		<TableRow android:id="@+id/tableRow3" 
				  android:layout_width="wrap_content"
				  android:layout_height="wrap_content" 
				  android:paddingTop="10px">
		</TableRow>
		
		<TableRow android:id="@+id/tableRow4" 
			      android:layout_width="wrap_content" 
			      android:layout_height="wrap_content">
			<Button android:id="@+id/crearUsuarioBtn" 
			 	    android:text="@string/BtnRegistrarse"
			 	    android:layout_width="wrap_content" 
			 	    android:layout_height="wrap_content"
			 	    android:onClick="crearUsuario"/>
		</TableRow>
		
		
	</TableLayout>
</LinearLayout>
</LinearLayout>
