<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background2"
    android:orientation="horizontal"
    android:padding="10dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" 
        android:background="@color/background2">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/avatar"
            android:textColor="@color/fuente" >
        </TextView>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center" >
            </ImageView>

            <Button
                android:id="@+id/cambiarAvatarBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginLeft="40dp"
                android:onClick="cambiarAvatar"
                android:text="Cambiar" >
            </Button>
        </LinearLayout>

        <TextView
            android:id="@+id/textNombre"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Nombre"
            android:textColor="@color/fuente" >
        </TextView>

        <EditText
            android:id="@+id/nombreTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" >

         
        </EditText>

        <TextView
            android:id="@+id/emailLbl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/email"
            android:textColor="@color/fuente" >
        </TextView>

        <EditText
            android:id="@+id/emailTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/passLbl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/pass"
            android:textColor="@color/fuente" >
        </TextView>

        <EditText
            android:id="@+id/passTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" >
        </EditText>

        <Button
            android:id="@+id/editarPerfilBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical|center_horizontal|center"
            android:onClick="editarUsuario"
            android:text="@string/BtnActualizar" />
    </LinearLayout>

</LinearLayout>