<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="#AAC1E2">

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:gravity="center" android:layout_weight="4">

		<TextView android:id="@+id/txBienvenida"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:gravity="center" android:text="@string/app_name"
			android:textStyle="bold" android:textSize="25sp" android:textColor="#000000" />

		<TextView android:id="@+id/textNombre" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:gravity="center"
			android:textStyle="bold" android:textColor="@color/fuente" />

	</LinearLayout>

	<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:layout_weight="1">

		<TableRow android:layout_weight="1" android:gravity="center"
			android:paddingLeft="20px" android:paddingRight="20px"
			android:paddingBottom="10px">
			<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:orientation="vertical" android:layout_width="fill_parent"
				android:layout_height="fill_parent" android:layout_weight="1"
				android:gravity="center" android:paddingRight="20px">
				<ImageButton android:layout_width="wrap_content"
					android:id="@+id/sitios_button" android:layout_height="wrap_content"
					android:background="@drawable/nuevo"
					android:clickable="true" />

				<TextView android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:gravity="center"
					android:textStyle="bold" android:textColor="@color/fuente" android:text="@string/sitios" />
			</LinearLayout>

			<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:orientation="vertical" android:layout_width="fill_parent"
				android:layout_height="fill_parent" android:layout_weight="1"
				android:gravity="center" android:paddingLeft="20px">

				<Button android:layout_width="wrap_content" android:id="@+id/amigos_button"
					android:layout_height="wrap_content" android:background="@drawable/calendar" />

				<TextView android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:gravity="center"
					android:textStyle="bold" android:textColor="@color/fuente" android:text="@string/amigos" />
			</LinearLayout>


		</TableRow>

		<TableRow android:layout_weight="1" android:gravity="center"
			android:paddingLeft="20px" android:paddingRight="20px"
			android:paddingTop="20px" android:paddingBottom="10px">

			<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:orientation="vertical" android:layout_width="fill_parent"
				android:layout_height="fill_parent" android:layout_weight="1"
				android:gravity="center" android:paddingRight="20px">
				<Button android:layout_width="wrap_content" android:id="@+id/perfil_button"
					android:layout_height="wrap_content" android:background="@drawable/users" android:padding="20px" />

				<TextView android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:gravity="center"
					android:textStyle="bold" android:textColor="@color/fuente" android:text="@string/perfil" />
			</LinearLayout>

			<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:orientation="vertical" android:layout_width="fill_parent"
				android:layout_height="fill_parent" android:layout_weight="1"
				android:gravity="center" android:paddingLeft="20px">

				<Button android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:background="@drawable/save" />

				<TextView android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:gravity="center"
					android:textStyle="bold" android:textColor="@color/fuente" android:text="Opciones" />
			</LinearLayout>

		</TableRow>

	</TableLayout>

</LinearLayout>
