<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:background="@color/background" android:layout_height="fill_parent"
	android:layout_width="fill_parent" android:padding="10dip" android:orientation="horizontal">
	
	<LinearLayout android:layout_width="fill_parent" android:orientation="vertical" android:layout_gravity="center" android:layout_height="wrap_content">
	
	<TableLayout android:id="@+id/tableLayout1" 
				 android:layout_width="match_parent" 
				 android:layout_height="fill_parent" android:visibility="visible">
		<LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout3" android:layout_width="match_parent" android:orientation="horizontal">
			<TextView android:id="@+id/textView1" android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/avatar" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_gravity="center"></TextView>
			<ImageView android:id="@+id/avatar" android:layout_height="150px" android:layout_width="150px" android:layout_gravity="center"></ImageView>
			<Button android:id="@+id/cambiarAvatarBtn" android:layout_width="wrap_content" android:text="Cambiar" android:onClick="cambiarAvatar" android:layout_height="wrap_content" android:layout_gravity="center"></Button>
		</LinearLayout>
		<TableRow android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/tableRow6">
			<TextView android:id="@+id/textView1" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/Nombre"></TextView>
			<EditText android:id="@+id/nombreTxt" android:layout_height="wrap_content" android:layout_width="200dp" android:inputType="textPersonName"></EditText>
		</TableRow>
		<TableRow android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/tableRow1">
			<TextView android:id="@+id/emailLbl" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/email"></TextView>
			<EditText android:id="@+id/emailTxt" android:layout_height="wrap_content" android:layout_width="match_parent" android:inputType="textEmailAddress"></EditText>
		</TableRow>
		<TableRow android:layout_width="match_parent" android:paddingTop="10px" android:id="@+id/tableRow3">
			<LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout2" android:orientation="vertical" android:layout_width="wrap_content"></LinearLayout>
		</TableRow>
		<TableRow android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/tableRow4">
			<Button android:id="@+id/editarPerfilBtn" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="Guardar Cambios" android:onClick="editarUsuario"></Button>
		</TableRow>
		
		
	</TableLayout>
</LinearLayout>
</LinearLayout>
